--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -97,25 +97,25 @@ jobs:
           name: agent-app-build-${{ steps.clean_version.outputs._1 }}.jar
           path: target/*.jar
       
-      - name: Deploy app to PROD env
-        if: github.event_name == 'push' && github.ref_name == 'main'
-        run: |
-          cd ./deployment/frontend
-          echo "TERRAFORM_BACKEND=grumpy-servers-backend-prod" > env.conf
-          echo "APP_NAME=grumpy-servers-prod" >> env.conf
-          echo "GATEWAY_NAME=grumpy-gateway-prod" >> env.conf
-          printf "HEROKU_EMAIL=%s\n" ${{ secrets.HEROKU_EMAIL }} >> env.conf
-          printf "HEROKU_API_KEY=%s" ${{ secrets.HEROKU_API_KEY }} >> env.conf
-          docker compose up destroy
-          cd ./deployment/backend
-          echo "TERRAFORM_BACKEND=grumpy-servers-backend-prod" > env.conf
-          echo "APP_NAME=grumpy-servers-prod" >> env.conf
-          echo "GATEWAY_NAME=grumpy-gateway-prod" >> env.conf
-          printf "HEROKU_EMAIL=%s\n" ${{ secrets.HEROKU_EMAIL }} >> env.conf
-          printf "HEROKU_API_KEY=%s" ${{ secrets.HEROKU_API_KEY }} >> env.conf
-          docker compose up destroy
-          docker compose up deploy
-          docker compose up deploy
-          cd ./deployment/frontend
-          docker compose up deploy
-          docker compose up deploy
+      #- name: Deploy app to PROD env
+      #  if: github.event_name == 'push' && github.ref_name == 'main'
+      #  run: |
+      #    cd ./deployment/frontend
+      #    echo "TERRAFORM_BACKEND=grumpy-servers-backend-prod" > env.conf
+      #    echo "APP_NAME=grumpy-servers-prod" >> env.conf
+      #    echo "GATEWAY_NAME=grumpy-gateway-prod" >> env.conf
+      #    printf "HEROKU_EMAIL=%s\n" ${{ secrets.HEROKU_EMAIL }} >> env.conf
+      #    printf "HEROKU_API_KEY=%s" ${{ secrets.HEROKU_API_KEY }} >> env.conf
+      #    docker compose up destroy
+      #    cd ./deployment/backend
+      #    echo "TERRAFORM_BACKEND=grumpy-servers-backend-prod" > env.conf
+      #    echo "APP_NAME=grumpy-servers-prod" >> env.conf
+      #    echo "GATEWAY_NAME=grumpy-gateway-prod" >> env.conf
+      #    printf "HEROKU_EMAIL=%s\n" ${{ secrets.HEROKU_EMAIL }} >> env.conf
+      #    printf "HEROKU_API_KEY=%s" ${{ secrets.HEROKU_API_KEY }} >> env.conf
+      #    docker compose up destroy
+      #    docker compose up deploy
+      #    docker compose up deploy
+      #    cd ./deployment/frontend
+      #    docker compose up deploy
+      #    docker compose up deploy
