--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -108,6 +108,8 @@ jobs:
           printf "HEROKU_EMAIL=%s\n" ${{ secrets.HEROKU_EMAIL }} >> env.conf
           printf "HEROKU_API_KEY=%s" ${{ secrets.HEROKU_API_KEY }} >> env.conf
           docker compose up destroy
+          docker compose up cleanup
+          docker compose up init
           cd ../../deployment/backend
           echo "TERRAFORM_BACKEND=grumpy-servers-backend-prod" > env.conf
           echo "APP_NAME=grumpy-servers-prod" >> env.conf
