--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -100,7 +100,7 @@ jobs:
       - name: Deploy app to PROD env
         if: github.event_name == 'push' && github.ref_name == 'main'
         run: |
-          cd ../../deployment/frontend
+          cd ./deployment/frontend
           echo "TERRAFORM_BACKEND=grumpy-servers-backend-prod" > env.conf
           echo "APP_NAME=grumpy-servers-prod" >> env.conf
           echo "GATEWAY_NAME=grumpy-gateway-prod" >> env.conf
