--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -97,7 +97,7 @@ jobs:
           name: agent-app-build-${{ steps.clean_version.outputs._1 }}.jar
           path: target/*.jar
       
-      - name: Deploy app to PROD env
+      - name: Deploy to PROD environment
         if: github.event_name == 'push' && github.ref_name == 'main'
         run: |
           cd ./deployment/frontend
