--- a/deployment/backend/terraform/servers/Dockerfile
+++ b/deployment/backend/terraform/servers/Dockerfile
@@ -1,2 +1,2 @@
-FROM grumpynatasa/agent-app:0.3.0
+FROM grumpynatasa/agent-app:latest
 CMD java -jar -server agent-app.jar --server.port=$PORT $JAVA_OPTS -Dserver.port=$PORT
